fix overflow bug  main page

--- a/css/style.sass
+++ b/css/style.sass
@@ -3,6 +3,7 @@
 @import ../footer/_footerMobile
 @import ../login/_loginFeatures
 @import ../hamburguerMenu/_hamburguerFeatures
+@import ../navigationBurguer/_navigB
 
 header
   overflow-x: hidden
@@ -18,36 +19,7 @@ header
     transform: translate(-50%, -50%)
     z-index: -2
 
-/*NAVIGATION LINKS NESTED*/
-.nav-links 
-  display: flex
-  margin-top: 90px
-  flex-direction: column
-  position: fixed
-  //background: #8B8B8B
-  opacity: .5
-  width: 100%
-  height: 100%
-  position: absolute
-  font-size: 30px
-  letter-spacing: .35em
-  font-family: 'popp'
-  display: none
-  z-index: 1
 
-  li
-    margin-top: 80px
-    text-align: center
-    justify-content: center
-    a
-      color:  $white-color
-      text-decoration: none
-      list-style: none
-      color: $white-color
-      cursor: pointer
-
-// SECONDARY NAVIGATION BAR 
-.secondary_navigation
 
     
 
@@ -95,6 +67,8 @@ header
     text-align: center
     overflow-y: hidden
     opacity: 0.7
+    letter-spacing: 2px
+
    
 
   h1 
@@ -110,6 +84,7 @@ header
     margin-left: 20px
     text-align: center
     color: #236841
+    padding-bottom: 5px
       
   
 
