--- a/navigationBurguer/_navigB.sass
+++ b/navigationBurguer/_navigB.sass
@@ -12,7 +12,7 @@
   font-size: 30px
   letter-spacing: .35em
   font-family: 'popp'
-  display: none
+  // display: none
   z-index: 1
   
 
@@ -27,7 +27,6 @@
       color: $white-color
       cursor: pointer
 
-// SECONDARY NAVIGATION BAR 
-.secondary_navigation
+
 
     
