--- a/videoFeatures/_videoCode.sass
+++ b/videoFeatures/_videoCode.sass
@@ -1,11 +1,12 @@
-header
-  overflow-x: hidden
-  .nav
+// header
+ 
+//   .nav
+//     // width: 100vw
   .videoSet video  
     height: 100vh
     object-fit: cover
     position: absolute
-    width: 100vw
+    width: 100%
     top: 50%
     left: 50%
     transform: translate(-50%, -50%)
